tests/fixtures/invalid/none_bitxor_dict.py
# Cannot bitwise XOR None and Dict[str, int]
x: None = None ^ {"a": 1}
